--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
+
+    debugCompile 'com.facebook.stetho:stetho:1.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
